Tue Nov 17 19:02:59 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* configure.in (BASERUBY): use Kernel#print instead of Kernel#p because
	  the baseruby may output CRLF as end of line.

Tue Nov 17 18:36:52 2015  Koichi Sasada  <ko1@atdot.net>

	* method.h: introduce rb_method_definition_t::complemented_count.

	* vm_method.c (method_definition_addref_complement): introduced.

	  def->alias_count is used to decide warn or do not warn at method
	  redefinition. Complemented method entries should not prevent
	  redefiniton warnings.

	* vm_method.c (rb_method_definition_release): release def iff
	  alias_count == 0 && complemented_count == 0.

	* test/ruby/test_module.rb: add a test.

Tue Nov 17 15:34:34 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>
	* NEWS: Added update from Unicode 7.0.0 to 8.0.0 [ci skip]

Tue Nov 17 15:30:30 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>
	* enc/unicode/casefold.h, name2ctype.h: Change Unicode
	  Version for regular expressions from 7.0.0 to
	  8.0.0 (with help from Kimihito Matsui) [Feature #11563]

Tue Nov 17 14:36:00 2015  Kenichi Kamiya  <kachick1@gmail.com>

	* lib/ostruct.rb (dig): Implement OpenStruct#dig
	  [Feature #11688]

Tue Nov 17 14:04:14 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/lib/socket.rb (Socket#recvmsg{,_nonblock}): default values
	  of clen must be nil.

	* ext/socket/ancdata.c (bsock_sendmsg_internal): handle nil of clen.
	  fixes test errors introduced at r52602.

Tue Nov 17 13:43:46 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/lib/socket.rb: UNIXSocket is not always exists.  fixes
	  install error on Windows, introduced at r52601.

Tue Nov 17 11:27:23 2015  Eric Wong  <e@80x24.org>

	* ext/socket/lib/socket.rb (Socket#recvfrom_nonblock):
	  UDPSocket#recvfrom_nonblock):
	  update doc for `exception: false` and destination buffer
	  [ruby-core:69542] [Feature #11229]
	  [ruby-core:69543] [Feature #11242]

Tue Nov 17 11:25:05 2015  Eric Turner  <ericturnerdev@gmail.com>
